--- a/reconhecimento de padrões/revisao_probabilidade.ipynb
+++ b/reconhecimento de padrões/revisao_probabilidade.ipynb
@@ -26,9 +26,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pandas version: 0.24.2\n",
-      "matplotlib version: 3.1.0\n",
-      "NumPy version: 1.16.4\n"
+      "pandas version: 0.25.1\n",
+      "matplotlib version: 3.1.1\n",
+      "NumPy version: 1.16.5\n"
      ]
     }
    ],
@@ -85,7 +85,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>5.1</td>\n",
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
@@ -93,7 +93,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>4.9</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
@@ -101,7 +101,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>4.7</td>\n",
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
@@ -109,7 +109,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>4.6</td>\n",
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
@@ -117,7 +117,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>5.0</td>\n",
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
@@ -125,7 +125,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>5.4</td>\n",
        "      <td>3.9</td>\n",
        "      <td>1.7</td>\n",
@@ -133,7 +133,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>4.6</td>\n",
        "      <td>3.4</td>\n",
        "      <td>1.4</td>\n",
@@ -141,7 +141,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>5.0</td>\n",
        "      <td>3.4</td>\n",
        "      <td>1.5</td>\n",
@@ -149,7 +149,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>4.4</td>\n",
        "      <td>2.9</td>\n",
        "      <td>1.4</td>\n",
@@ -157,7 +157,7 @@
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>4.9</td>\n",
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
@@ -233,56 +233,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
+       "      <td>count</td>\n",
        "      <td>150.000000</td>\n",
        "      <td>150.000000</td>\n",
        "      <td>150.000000</td>\n",
        "      <td>150.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
+       "      <td>mean</td>\n",
        "      <td>5.843333</td>\n",
        "      <td>3.054000</td>\n",
        "      <td>3.758667</td>\n",
        "      <td>1.198667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
+       "      <td>std</td>\n",
        "      <td>0.828066</td>\n",
        "      <td>0.433594</td>\n",
        "      <td>1.764420</td>\n",
        "      <td>0.763161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
+       "      <td>min</td>\n",
        "      <td>4.300000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
+       "      <td>25%</td>\n",
        "      <td>5.100000</td>\n",
        "      <td>2.800000</td>\n",
        "      <td>1.600000</td>\n",
        "      <td>0.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
+       "      <td>50%</td>\n",
        "      <td>5.800000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>4.350000</td>\n",
        "      <td>1.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
+       "      <td>75%</td>\n",
        "      <td>6.400000</td>\n",
        "      <td>3.300000</td>\n",
        "      <td>5.100000</td>\n",
        "      <td>1.800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
+       "      <td>max</td>\n",
        "      <td>7.900000</td>\n",
        "      <td>4.400000</td>\n",
        "      <td>6.900000</td>\n",
@@ -379,56 +379,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
+       "      <td>count</td>\n",
        "      <td>150.000000</td>\n",
        "      <td>150.000000</td>\n",
        "      <td>150.000000</td>\n",
        "      <td>150.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
+       "      <td>mean</td>\n",
        "      <td>1.840000</td>\n",
        "      <td>1.900000</td>\n",
        "      <td>1.973333</td>\n",
        "      <td>1.986667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
+       "      <td>std</td>\n",
        "      <td>0.714941</td>\n",
        "      <td>0.576381</td>\n",
        "      <td>0.802234</td>\n",
        "      <td>0.810888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
+       "      <td>min</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
+       "      <td>25%</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
+       "      <td>50%</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>2.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
+       "      <td>75%</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>3.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
+       "      <td>max</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>3.000000</td>\n",
@@ -471,6 +471,8 @@
     "iris.loc[(iris['petal-width'] >= 1.7), 'petal-width'] = 3\n",
     "iris.loc[(iris['petal-width'] >= 0.9) & (iris['petal-width'] < 1.7), 'petal-width'] = 2\n",
     "iris.loc[(iris['petal-width'] >= 0.1) & (iris['petal-width'] < 0.9), 'petal-width'] = 1\n",
+    "\n",
+    "iris\n",
     "\n",
     "iris.describe()"
    ]
@@ -518,28 +520,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>setosa</th>\n",
+       "      <td>setosa</td>\n",
        "      <td>45</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>versicolor</th>\n",
+       "      <td>versicolor</td>\n",
        "      <td>6</td>\n",
        "      <td>38</td>\n",
        "      <td>6</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>virginica</th>\n",
+       "      <td>virginica</td>\n",
        "      <td>1</td>\n",
        "      <td>27</td>\n",
        "      <td>22</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>total</th>\n",
+       "      <td>total</td>\n",
        "      <td>52</td>\n",
        "      <td>70</td>\n",
        "      <td>28</td>\n",
@@ -630,28 +632,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>setosa</th>\n",
+       "      <td>setosa</td>\n",
        "      <td>1</td>\n",
        "      <td>34</td>\n",
        "      <td>15</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>versicolor</th>\n",
+       "      <td>versicolor</td>\n",
        "      <td>21</td>\n",
        "      <td>29</td>\n",
        "      <td>0</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>virginica</th>\n",
+       "      <td>virginica</td>\n",
        "      <td>11</td>\n",
        "      <td>36</td>\n",
        "      <td>3</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>total</th>\n",
+       "      <td>total</td>\n",
        "      <td>33</td>\n",
        "      <td>99</td>\n",
        "      <td>18</td>\n",
@@ -742,28 +744,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>setosa</th>\n",
+       "      <td>setosa</td>\n",
        "      <td>50</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>versicolor</th>\n",
+       "      <td>versicolor</td>\n",
        "      <td>0</td>\n",
        "      <td>48</td>\n",
        "      <td>2</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>virginica</th>\n",
+       "      <td>virginica</td>\n",
        "      <td>0</td>\n",
        "      <td>6</td>\n",
        "      <td>44</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>total</th>\n",
+       "      <td>total</td>\n",
        "      <td>50</td>\n",
        "      <td>54</td>\n",
        "      <td>46</td>\n",
@@ -854,28 +856,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>setosa</th>\n",
+       "      <td>setosa</td>\n",
        "      <td>50</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>versicolor</th>\n",
+       "      <td>versicolor</td>\n",
        "      <td>0</td>\n",
        "      <td>48</td>\n",
        "      <td>2</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>virginica</th>\n",
+       "      <td>virginica</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>46</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>total</th>\n",
+       "      <td>total</td>\n",
        "      <td>50</td>\n",
        "      <td>52</td>\n",
        "      <td>48</td>\n",
@@ -931,13 +933,21 @@
    "source": [
     "### Eventos:\n",
     "\n",
-    "__Qual a probabilidade de ser setosa ou ter petal length pequena? 50/150 + 50/50__<br>\n",
-    "__Qual a probabilidade de ser virginica e ter petal width grande? 46/48__\n",
+    "__Qual a probabilidade de ser setosa ou ter petal-length pequena? 50/150 + 50/50 - 50/50__<br>\n",
+    "__Qual a probabilidade de ser virginica e ter petal width grande? 50/150 + 46/48__<br>\n",
+    "__\n",
     "\n",
     "### Condicionais:\n",
     "\n",
-    "__Qual a probabilidade de petal width grande e ser virginica? (46/48)/(50/150)__"
+    "__Qual a probabilidade de petal-width ser grande, a classe ser virginica? (46/48)/(50/150)__<br>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -956,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
